<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/sort_name" android:title="@string/menu_sort_name" />
            <item android:id="@+id/sort_price" android:title="@string/menu_sort_price" />
            <item android:id="@+id/sort_rating" android:title="@string/menu_sort_rating" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
